--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,8 @@
     "generate": "prisma generate",
     "migrate:dev": "prisma migrate dev",
     "migrate:prod": "prisma migrate deploy",
-    "studio": "prisma studio"
+    "studio": "prisma studio",
+    "seed": "ts-node src/seed.ts"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
@@ -20,6 +21,7 @@
     "@types/node": "^22.19.1",
     "@types/pg": "^8.15.6",
     "prisma": "^7.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
 }
