--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,6 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.17",
     "lucide-react": "^0.554.0",
     "next": "^16.0.3",
@@ -23,6 +22,10 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@repo/db": "workspace:*",
+    "@repo/validation" : "workspace:*",
+    "@repo/auth" : "workspace:*",
     "@types/node": "^22.19.1",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
