--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "main": "src/index.ts",
   "types": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
-    "@repo/db": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@repo/db": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "typescript": "^5.9.3"
