--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -9,13 +9,12 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "typescript": "^5.9.3"
   }
