--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,12 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^7.0.0",
     "@tailwindcss/postcss": "^4.1.17",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "next": "^16.0.3",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
