--- a/turbo.json
+++ b/turbo.json
@@ -1,18 +1,28 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+
+  "globalEnv": ["DATABASE_URL", "JWT_SECRET"],
+
   "tasks": {
+    "generate": {
+      "outputs": []
+    },
+
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "generate"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
+
     "lint": {
       "dependsOn": ["^lint"]
     },
+
     "check-types": {
       "dependsOn": ["^check-types"]
     },
+
     "dev": {
       "cache": false,
       "persistent": true
